css/main.css
/*####GENERAL ELEMENT STYLES####*/
body {
    font-family: "Roboto", sans-serif;

    display: flex;
    overflow: hidden;
    flex-direction: column;

    max-height: 100vh;
    margin: 0;
    padding: 0;
}

h1 {
    font-size: 225%;
    font-weight: 500;

    margin: 0;
    padding: 0;
}

h2 {
    font-size: 200%;
    font-weight: 500;

    margin: 0;
    padding: 0;
}

h3 {
    font-size: 140%;
    font-weight: 500;

    margin: 0;
    padding: 0;
}

h4 {
    font-weight: 500;

    margin: 0 0 1em 0;
    padding: 0;
}

p {
    font-size: 120%;
    line-height: normal;

    margin-top: 0;
    margin-bottom: 1em;
    padding-top: 0;
}

em {
    font-style: italic;
}

p:last-child {
    margin-bottom: 0;
}

a:link {
    color: black;
}

a:visited {
    color: #616161;
}

a:hover {
    text-decoration: none;
}

noscript {
    display: block;

    margin-top: .5em;
}

noscript a:link {
    color: white;
}

noscript a:visited {
    color: white;
}

code {
    font-family: "Roboto Mono", monospace;
}

ol {
    list-style: decimal;
}

/*####HEADER & NAV STYLES####*/
header {
    z-index: 1;

    display: flex;
    flex-direction: row;

    margin: 0;
    padding: 1em;

    text-align: center;

    color: white;
    background-color: #3F51B5;
    box-shadow: 0 .2em .4em 0 rgba(0, 0, 0, .5);

    align-items: center;
    justify-content: center;
}

.main-header {
    z-index: 10;

    flex-direction: column;

    padding-bottom: 0;

    background-color: #303F9F;
    box-shadow: 0 .2em .4em 0 rgba(0, 0, 0, .75);

    align-items: center;
}

.main-header h1 {
    font-size: 300%;

    margin-bottom: 1em;
}

header a:link {
    color: white;
}

header a:visited {
    color: white;
}

nav {
    display: flex;

    min-width: 40%;
    margin-top: 1em;

    justify-content: center;
}

nav ul {
    display: flex;

    width: 100%;
    margin-bottom: 0;
    padding: 0;

    align-items: center;
    justify-content: center;
}

nav ul li {
    font-size: 150%;

    position: relative;

    display: inline-block;

    list-style-type: none;

    transition: .25s;

    flex: 1;
}

nav ul li a {
    padding: .3em;
}

nav li:hover {
    color: white;
    background-color: #5C6BC0;
}

nav li a {
    display: block;

    text-decoration: none;
}

nav li a:visited {
    color: white;
}

.current-page {
    color: white;
    box-shadow: 0 -.2rem 0 white inset;
}

.current-page:hover {
    background-color: initial;
}

.left, .right {
    flex: 1;
}

/*####FOOTER STYLES####*/
footer {
    font-size: 120%;

    display: flex;

    width: 100%;
    min-height: 6em;

    color: white;
    background-color: #3F4883;

    align-items: center;
    justify-content: space-between;
}

.footer-left {
    float: left;

    padding-left: 2em;
}

.footer-source {
    font-size: 70%;

    margin: .5em 0;
}

.footer-source a:link, .footer-right a:link {
    color: white;
}

.footer-source a:visited, .footer-right a:visited {
    color: white;
}

.footer-right {
    font-size: 200%;

    float: right;

    padding-right: 2em;
}

.footer-right a:hover {
    transition: .3s;

    color: #7986CB;
}

#theme-switch {
    font-size: 70%;

    width: max-content;

    cursor: pointer;
    text-decoration: underline;
}

/*####CONTENT CONTAINERS####*/
.page-content, .page-content-center {
    display: flex;
    overflow-y: scroll;
    flex-direction: column;

    width: 100%;
    margin: 0;
    padding: 0;
    padding-top: 1.5em;

    align-items: center;
}

.page-content-center {
    overflow: hidden;

    min-height: 100vh;

    justify-content: center;
}

.center-window {
    display: flex;
    flex-direction: column;

    width: 60vw;
    margin-bottom: 2em;
    padding: 0 1em 1em 1em;

    text-align: center;

    border-radius: .1em;
    background-color: #FAFAFA;
    box-shadow: 0 .2em .4em 0 rgba(0, 0, 0, .50);

    align-items: center;
}

.error-window {
    width: 35vw;
}

.center-window header {
    width: 100%;
    margin-bottom: .5em;
    padding: 1.25em 1em;
}

.center-window h3, .center-window p {
    line-height: 1.5em;

    max-width: 70%;
}

/*####COMPONENT STYLES*/

.header-email {
    font-size: 150%;

    margin-top: .5em;
}

.header-email i {
    margin-right: .5em;
}

.links {
    font-size: 300%;
}

.links a:link {
    color: #616161;
}

.links i {
    margin: .5em;
}

.links i:hover {
    transition: .3s;

    color: #3F51B5;
}


/*####PROJECTS STYLES####*/
.projects-container {
    display: flex;
    flex-direction: row;

    align-items: flex-start;
    flex-wrap: wrap;
    justify-content: space-evenly;
}


.project-entry {
    display: flex;
    flex-direction: column;

    width: 22em;
    margin: 1em;

    cursor: pointer;

    box-shadow: 0 .2em .4em 0 rgba(0, 0, 0, .50);
}

.project-entry:hover {
    transition: .3s;

    background-color: #EEEEEE;
    box-shadow: 0 .4em .8em 0 rgba(0, 0, 0, .7);
}

.project-content {
    padding: 1em;

    color: white;
    background-color: #3F51B5;
}

.project-content h2 {
    margin-bottom: .3em;
}

.project-content h4 i {
    margin-right: .5em;
}

.project-img img, .project-img video {
    width: auto;
    max-width: 20em;
    height: 15em;
    padding: 1em 0;

    object-fit: contain;
}

.project-tags {
    background-color: #3949AB;
}

.project-tags ul {
    display: flex;

    margin: .5em;

    flex-wrap: wrap;
    justify-content: space-evenly;
}

.project-tags li {
    font-size: 90%;

    margin: .2em;
    padding: .5em 1em;

    color: white;
    border-radius: 1.5em / 100%;
    background-color: #5C6BC0;
}

/*####PROJECT POPUP STYLES*/
.cover {
    position: fixed;
    z-index: 100;
    top: 0;
    left: 0;

    min-width: 100vw;
    min-height: 100vh;

    background-color: rgba(0, 0, 0, .75);
}

.page-content-center .center-window {
    max-height: 90vh;
}

.project-popup-content {
    display: flex;
    overflow-y: auto;
    flex-direction: column;

    margin: -.5em -1em -1em -1em;
    padding: .5em;

    align-items: center;
}

.image-container {
    display: flex;

    align-items: center;
    flex-wrap: wrap;
    justify-content: center;
}

.image-container img, .image-container video {
    width: 35rem;
    max-width: 95%;
    margin: .5rem;

    box-shadow: 0 .2em .4em 0 rgba(0, 0, 0, .25);

    object-fit: contain;
}

.close-button {
    font-size: 2em;

    float: right;

    cursor: pointer;

    color: white;
}

/* ### IMAGE GALLERY ### */
.gallery {
    display: flex;
    flex-direction: column;

    width: 70%;
    padding: .5em;

    background-color: #E0E0E0;
}

#gallery-image {
    display: grid;

    width: 100%;
    height: 40em;

    justify-content: center;
    grid-template-columns: 33% 33% 33%;
    grid-template-rows: 33% 33% 33%;
}

#gallery-current {
    max-width: 100%;
    max-height: 100%;

    object-fit: contain;
    grid-row: 1/-1;
    grid-column: 1/-1;
    align-self: center;
    justify-self: center;
}

.gallery-button {
    z-index: 1000;

    display: flex;

    width: 3rem;
    height: 3rem;

    cursor: pointer;
    transition: .25s;

    color: white;
    border-radius: 50%;
    background-color: #3949AB;
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, .50);

    grid-row: 2;
    align-items: center;
    justify-content: center;
}

.gallery-button:hover {
    background-color: #3F51B5;
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, .75);
}

.gallery-button-disabled {
    cursor: default;

    color: #9E9E9E;
    background-color: #757575;
}

.gallery-button-disabled:hover {
    background-color: #757575;
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, .50);
}

#prev-button {
    margin-left: 1em;

    justify-self: start;
    align-self: center;
    grid-column: 1;
}

#next-button {
    margin-right: 1em;

    justify-self: end;
    align-self: center;
    grid-column: 3;
}

#gallery-caption {
    margin-bottom: .5em;

    align-self: center;
}

#gallery-images-container {
    margin: 0 -.5em -.5em -.5em;
    padding: .5em;

    background-color: #5C6BC0;
}

#gallery-images {
    display: flex;
    overflow-x: auto;
    overflow-y: hidden;

    justify-content: start;
}

#gallery-images img {
    height: 8em;
    padding: 0 .25em;

    cursor: pointer;

    object-fit: contain;
    filter: brightness(.65);
}

img#selected-image {
    filter: unset !important;
}

#gallery-images img:first-child {
    padding-left: 0;
}

#gallery-images img:last-child {
    padding-right: 0;
}

/*####IMAGES*/
.error {
    width: 20em;
    height: 20em;

    background-color: #9E9E9E;

    mask-image: url(../img/error.svg);
    mask-size: cover;
}

@media only screen and (max-device-width: 480px) {
    body {
        font-size: 150%;

        display: initial;
        overflow: scroll;
    }

    h1 {
        font-size: 275%;
    }

    h2 {
        font-size: 175%;
    }

    h3 {
        font-size: 150%;
    }

    p {
        font-size: 80%;
    }

    .main-header h1 {
        font-size: 175%;

        margin-bottom: .5em;
    }

    .main-header h2 {
        font-size: 90%;
        font-weight: 300;
    }

    .header-email {
        font-size: 80%;
    }

    nav {
        width: 100%;
    }

    nav ul li {
        font-size: 90%;
    }

    .links {
        font-size: 200%;
    }

    .links i {
        margin: .5em .25em .5em .25em;
    }

    .center-window {
        width: 90vw;
        margin-bottom: 1em;
        padding: 0 .5em .5em .5em;
    }

    .center-window header {
        margin-bottom: 1em;
        padding: .5em;
    }

    .center-window header h2 {
        font-size: 130%;
    }

    .center-window p {
        max-width: 95%;
    }

    .error-window {
        width: 90vw;
    }

    .project-entry {
        font-size: 60%;
    }

    .project-entry h3 {
        font-size: 100%;
    }

    .page-content-center .center-window {
        font-size: 80%;
    }

    footer {
        font-size: 65%;
    }

    .footer-left {
        padding-left: 1em;
    }

    .footer-right {
        padding-right: 1em;
    }

    .error {
        width: 10em;
        height: 10em;
    }
}

